# ulogger

./: .gitignore  README.md  create_icon.py  inspect_elf.py  launcher.py  pyproject.toml  run_ulogger.bat  ulog.db  ulogger.spec
screenshots/: README.md
src/ulog_console/: __main__.py  buffer.py  cli.py  comm_selector.py  elf_reader.py  logs.py  messages.py  serial_reader.py  viewer.py
src/ulogger/: __main__.py  buffer.py  cli.py  comm_selector.py  database.py  datafill.sql  elf_reader.py  file_message.py  keep.py  logs.py  messages.py  models.py  reader_new.py  run_ulog_console.py  serial_reader.py  settings.py  ulog.db  ulogger.py  viewer.py  viewer_textual.py
test/: modbus_relay.elf
