[project]
name = "ulog-console"
version = "1.0"
description = ""
authors = [
    {name = "adarwoo",email = "44254473+adarwoo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "pyelftools (>=0.32,<0.33)",
    "pycurses (>=0.0.37,<0.0.38)",
    "windows-curses (>=2.4.1,<3.0.0)",
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry]
packages = [{include = "ulog_console", from = "src"}]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ulog_console = "ulog_console.__main__:main"