[project]
name = "adarwoo-ulogger"
version = "1.2.0"
description = "Modern terminal-based viewer for ULog embedded traces with real-time serial monitoring"
authors = [
    {name = "adarwoo",email = "44254473+adarwoo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = {text = "MIT"}
keywords = ["logging", "embedded", "serial", "uart", "tui", "textual", "avr", "microcontroller", "debug"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
    "Topic :: Terminals",
]
dependencies = [
    "pyelftools>=0.32,<0.33",
    "pyserial>=3.5,<4.0",
    "textual>=0.96.1,<1.0.0",
    "mysqlite>=0.0.0,<0.0.1",
    "sqlalchemy>=2.0.0,<3.0.0",
    "platformdirs>=4.0.0,<5.0.0"
]

[project.urls]
Homepage = "https://github.com/adarwoo/ulogger"
Documentation = "https://github.com/adarwoo/ulogger/wiki"
Repository = "https://github.com/adarwoo/ulogger"
Issues = "https://github.com/adarwoo/ulogger/issues"
Changelog = "https://github.com/adarwoo/ulogger/releases"

[tool.poetry]
packages = [{include = "ulogger", from = "src"}]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ulogger = "ulogger.__main__:main"